--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 2.0.0
 homepage: https://github.com/appditto/flutter_nano_ffi
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
-  flutter: ">=1.12.0"
+  sdk: '>=2.19.5 <3.0.0'
+#  flutter: ">=1.12.0"
 
 dependencies:
   flutter:
